--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "d652afb2-6f20-46d1-aeb0-5e2bf680a061"
   },
   "newProjectRoot": "projects",
   "projects": {
